--- a/RCCM/Views/Home/Index.cshtml
+++ b/RCCM/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="row justify-content-around">
             <!-- First box  -->
             <div class="col-md-6 mb-3 d-flex justify-content-center align-items-center" style="height: 600px;">
-                <a asp-action="RecruitIndex" asp-controller="Recruitment" class="text-center text-primary p-5 " style="width: 400px; font-size: 36px; text-shadow: 2px 2px #000000; color: #072e6e;">
+                <a asp-action="ScheduleExam" asp-controller="CandidateExamSchedule" class="text-center text-primary p-5 " style="width: 400px; font-size: 36px; text-shadow: 2px 2px #000000; color: #072e6e;">
                     
                     <span class="align-middle">التوظيف</span>
                 </a>
