--- a/RCCM/Views/Interview/InterviewTable.cshtml
+++ b/RCCM/Views/Interview/InterviewTable.cshtml
@@ -19,7 +19,7 @@
                                         <th>اسم المرشح</th>
                                         <th>الرقم الهوية</th>
                                         <th>الجنسية</th>
-                                         <th>التخصص</th>     <!--The infomtion of the table for each candidate -->
+                                         <th>التخصص</th>    
                                         <th>رقم الجوال</th>
                                         <th>الحالة المرشح</th>
                                         <th>الحضور</th>
