--- a/RCCM/Views/Shared/_Layout.cshtml
+++ b/RCCM/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                 </li>
                 <li class="nav-item border-start mx-2"></li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" asp-area="" asp-controller="Recruitment" asp-action="RecruitIndex">التوظيف</a>
+                    <a class="nav-link text-white" asp-area="" asp-controller="CandidateExamSchedule" asp-action="ScheduleExam">التوظيف</a>
                 </li>
                 <li class="nav-item border-start mx-2"></li>
                 <li class="nav-item">
