--- a/RCCM/Views/_ViewImports.cshtml
+++ b/RCCM/Views/_ViewImports.cshtml
@@ -10,4 +10,5 @@
 @using Core.Entities.ViewModel.ExamResult;
 @using Core.Entities.ViewModel.Interview;
 @using Core.Entities.ViewModel.Experience;
+@using Core.Entities.ViewModel.CandidateExamSchedule;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
