--- a/RCCM/Views/Grade/Add.cshtml
+++ b/RCCM/Views/Grade/Add.cshtml
@@ -7,11 +7,10 @@
 
 <div class="container my-4">
 
-    <!-- Display Success Alert -->
-    <div id="successAlert" class="alert alert-success alert-dismissible fade show d-none" role="alert">
-        <span id="alertMessage"></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <div id="successAlert" class="alert alert-success d-none">
+        <span class="alert-message"></span>
     </div>
+
 
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -37,28 +36,3 @@
     </div>
 </div>
 
-@section scripts {
-    <!-- Include jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <script>
-        $(document).ready(function () {
-            $('#addGradeForm').on('submit', function (event) {
-                event.preventDefault(); // Prevent default form submission
-
-                var form = $(this);
-                var successAlert = $('#successAlert');
-                var alertMessage = $('#alertMessage');
-
-                // Show success alert
-                alertMessage.text('درجة الاختبار تم إضافتها بنجاح!');
-                successAlert.removeClass('d-none');
-
-                // Simulate a delay before redirecting
-                setTimeout(function () {
-                    form.off('submit').submit(); // Unbind event handler and submit form programmatically after delay
-                }, 2000); // 2 seconds delay
-            });
-        });
-    </script>
-}
