--- a/RCCM/Views/CandidateExamSchedule/Index.cshtml
+++ b/RCCM/Views/CandidateExamSchedule/Index.cshtml
@@ -1,14 +1,47 @@
 ﻿@model List<CandidateExamScheduleViewModel>
 
-@foreach(var a in Model)
-{
-    <h1>@a.Candidate.CandidateName</h1>
-    <h1>@a.Candidate.Email</h1>
-    <h1>@a.Candidate.NationalId</h1>
-    <h1>@a.Candidate.PhoneNumber</h1>
-    <h1>@a.Candidate.Gender</h1>
-    <h1>@a.ExamTypeConf.Title</h1>
-    <h1>@a.ExamDate</h1>
-    
+<div class="container mt-4">
+    <div class="row">
+        <h2 class="text-center mb-4">الاختبارات</h2>
 
-}
+        <!-- Candidates Test Table -->
+        <div class="col-md-12">
+            <div class="card shadow">
+                <div class="card-header" style="background-color: #072e6e; color: white;">
+                    جدول الاختبارات للمرشحين
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-bordered table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>اسم المرشح</th>
+                                    <th>الرقم الهوية</th>
+                                    <th>الجنسية</th>
+                                    <th>رقم الجوال</th>
+                                    <th>اسم الاختبار</th>
+                                    <th>تاريخ الاختبار</th>
+                                    <th>حضور</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var a in Model)
+                                {
+                                    <tr>
+                                        <td>@a.Candidate.CandidateName</td>
+                                        <td>@a.Candidate.NationalId</td>
+                                        <td>@a.Candidate.Gender</td>
+                                        <td>@a.Candidate.PhoneNumber</td>
+                                        <td>@a.ExamTypeConf.Title</td>
+                                        <td>@a.ExamDate</td>
+                                        <td><span class="badge badge-secondary">قيد الانتظار</span></td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
