--- a/RCCM/Views/Interview/Add.cshtml
+++ b/RCCM/Views/Interview/Add.cshtml
@@ -25,7 +25,7 @@
                             </div>
                         <div class="mb-3">
                             <label asp-for="InterviewDate" class="form-label">تاريخ المقابلة</label>
-                            <input asp-for="InterviewDate" class="form-control" />
+                                <input asp-for="InterviewDate" class="form-control" value="@DateTime.Now.ToString("yyyy-MM-dd")" />
                         </div>
                         <div class="d-flex justify-content-between mt-4">
                             <button type="submit" class="btn bg-custom-primary text-white">إضافة المقابلة</button>
